@@ -17584,6 +17584,8 @@ logfile cache:</p></div>
 
 <div class='toclevel4'><a href='#_pnp_export'>pnp_export</a></div>
 
+<div class='toclevel4'><a href='#_report_from_email'>report_from_email</a></div>
+
 <div class='toclevel3'><a href='#_component_thruk_plugin_statusmap'>Component Thruk::Plugin::Statusmap</a></div>
 
 <div class='toclevel4'><a href='#_statusmap_default_type'>statusmap_default_type</a></div>
@@ -18852,6 +18854,7 @@ probably have to download the wkhtmltopdf binary in a recent version.</p></div>
   report_base_url   = http://host.local/thruk/cgi-bin/
   wkhtmltopdf       = /usr/bin/wkhtmltopdf
   pnp_export        = plugins/plugins-enabled/reports2/script/pnp_export.sh
+  report_from_email = User Name &lt;example@mail.com&gt;
 &lt;/Component&gt;</tt></pre>
 </div></div>
 <h4 id="_report_nice_level">report_nice_level</h4>
@@ -18886,6 +18889,9 @@ may force to use wget by setting <em>PNP_URL_PREFIX</em>.</p></div>
 <pre><tt>export PNP_WGET="wget -q --user=admin --password=secret"
 export PNP_URL_PREFIX="http://demo.thruk.org"</tt></pre>
 </div></div>
+<h4 id="_report_from_email">report_from_email</h4>
+<div class="paragraph"><p>Set the from address used in e-mail reports.
+Format is "User Name &lt;<a href="mailto:example@mail.com">example@mail.com</a>&gt;"</p></div>
 <h3 id="_component_thruk_plugin_statusmap">Component Thruk::Plugin::Statusmap</h3><div style="clear:left"></div>
 <div class="paragraph"><p>The Statusmap plugin gives an overview over your network.</p></div>
 <div class="paragraph"><p>ex.:</p></div>
@@ -19658,7 +19664,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-03-14 21:29:48 CEST
+Last updated 2013-03-21 18:18:01 CEST
 </div>
 </div>
 </body>
