@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "thruk 3"
-.TH thruk 3 "2013-03-08" "perl v5.10.1" "User Contributed Perl Documentation"
+.TH thruk 3 "2013-03-21" "perl v5.10.1" "User Contributed Perl Documentation"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -292,4 +292,4 @@ Generate pdf report and send it by mail
 .Ve
 .SH "AUTHOR"
 .IX Header "AUTHOR"
-2012, Sven Nierlein, <sven@nierlein.de>
+2012\-2013, Sven Nierlein, <sven@nierlein.de>
