@@ -567,6 +567,9 @@ cookie_auth_session_cache_timeout = 5
 
     # pnp export script is used to export pnp graphs into reports
     #pnp_export = /path/to/pnp_export.sh
+
+    # set the from address used in e-mail reports
+    #report_from_email = User Name <example@mail.com>
 </Component>
 
 #####################################
